[project]
name = "content-creator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "python-dotenv>=1.2.2",
]
